Kubernetes/61-Longhorn/base/resources/middleware-dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-dashboard-basicauth
spec:
  basicAuth:
    secret: longhorn-dashboard-basicauth
    removeHeader: true

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-dashboard-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: 'https'
