Kubernetes/61-Longhorn/base/resources/ingressroute-dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: CHANGE_ME
      kind: Rule
      middlewares:
        - name: chain-admin
          namespace: traefik-system
        - name: longhorn-dashboard-basicauth
          namespace: longhorn-system
      services:
        - name: longhorn-frontend
          port: 80
          passHostHeader: true
          # sticky:
          #   cookie:
          #     httpOnly: true
          #     secure: true
          #     sameSite: none
  tls:
    secretName: longhorn-dashboard-certificate
