Kubernetes/61-Longhorn/base/resources/network-policy-monitoring.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-to-longhorn-manager
spec:
  podSelector:
    matchLabels:
      app: longhorn-manager
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-agent
          podSelector:
            matchLabels:
              app.kubernetes.io/component: alloy
      ports:
        - protocol: TCP
          port: 9500
